add jQuery exercise

--- a/index.html
+++ b/index.html
@@ -30,14 +30,23 @@
     </ul>
 
     <section class="body-section" id="basicBodyContainer" style="display:none">
-      <h2>Basic AJAX</h2>
       <p>Please see the file <code>js/basic-ajax.js</code> in this repo for explanation of this page.</p>
-      <button class="btn btn-primary" id="loadJumbotronBtn">Load Jumbotron</button>
-      <div id="jumbotronContainer"></div>
+      <button class="btn btn-primary" id="loadBtn1">Load Jumbotron</button>
+      <div id="jumbotronContainer1"></div>
     </section>
 
     <section class="body-section" id="jqueryBodyContainer" style="display:none">
-      <h2>AJAX with jQuery</h2>
+      <p>Please see the file <code>js/jquery-ajax.js</code> in this repo for explanation of this page.</p>
+      <button class="btn btn-primary" id="loadBtn2">Load Jumbotron</button>
+      <div id="jumbotronContainer2"></div>
+
+      <hr />
+
+      <button class="btn btn-primary" id="generateDoggoBtn">Generate Doggo</button>
+      <div id="doggoContainer"></div>
+
+      <hr />
+
     </section>
 
     <section class="body-section" id="fetchBodyContainer" style="display:none">
