add second jquery exercise

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </ul>
 
     <section class="body-section" id="basicBodyContainer" style="display:none">
-      <p>Please see the file <code>js/basic-ajax.js</code> in this repo for explanation of this page.</p>
+      <p>Please see the file <code>js/basic-ajax.js</code> in this repo for an explanation of this page.</p>
       <button class="btn btn-primary" id="loadBtn1">Load Jumbotron</button>
       <div id="jumbotronContainer1"></div>
     </section>
 
     <section class="body-section" id="jqueryBodyContainer" style="display:none">
-      <p>Please see the file <code>js/jquery-ajax.js</code> in this repo for explanation of this page.</p>
+      <p>Please see the file <code>js/jquery-ajax.js</code> in this repo for exercises for this page.</p>
       <button class="btn btn-primary" id="loadBtn2">Load Jumbotron</button>
       <div id="jumbotronContainer2"></div>
 
@@ -46,6 +46,8 @@
       <div id="doggoContainer"></div>
 
       <hr />
+
+      <div id="selectBreedContainer"></div>
 
     </section>
 
