--- a/index.html
+++ b/index.html
@@ -52,11 +52,7 @@
     </section>
 
     <section class="body-section" id="fetchBodyContainer" style="display:none">
-      <h2>Fetch API</h2>
-
-      <p>More recently, browsers have adopted the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API">Fetch API</a>.
-        With the goal of making AJAX easier to use than <code>XMLHttpRequest</code> without requiring an external library (ie: jQuery).</p>
-
+      <p>Please see the file <code>js/fetch-api.js</code> in this repo for exercises for this page.</p>
     </section>
 
   </div>
