saving state on Fetch API

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
 
     <section class="body-section" id="fetchBodyContainer" style="display:none">
       <p>Please see the file <code>js/fetch-api.js</code> in this repo for exercises for this page.</p>
+      <button class="btn btn-primary" id="loadBtn3">Load Jumbotron</button>
+      <div id="jumbotronContainer3"></div>
+
+      <hr />
+
+      <div id="catContainer"></div>
+
     </section>
 
   </div>
