--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
 
       <hr />
 
+      <button class="btn btn-primary" id="generateCatBtn">Generate Cat</button>
       <div id="catContainer"></div>
+
+      <hr />
+
+      <!-- What fun thing can you build here using APIs + AJAX? -->
 
     </section>
 
